--- a/src/main/resources/edu/bip/client/view/editBook.fxml
+++ b/src/main/resources/edu/bip/client/view/editBook.fxml
@@ -13,8 +13,8 @@
    <children>
       <GridPane layoutX="107.0" layoutY="76.0" prefHeight="74.0" prefWidth="197.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="10.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="180.0" minWidth="10.0" prefWidth="118.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="252.0" minWidth="10.0" prefWidth="252.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -26,27 +26,27 @@
          <children>
             <Label text="Название">
                <font>
-                  <Font name="System Bold" size="26.0" />
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Label>
             <Label text="Жанр" GridPane.rowIndex="4">
                <font>
-                  <Font name="System Bold" size="26.0" />
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Label>
             <Label text="Издание" GridPane.rowIndex="2">
                <font>
-                  <Font name="System Bold" size="26.0" />
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Label>
             <Label text="Год выпуска" GridPane.rowIndex="3">
                <font>
-                  <Font name="System Bold" size="26.0" />
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Label>
             <Label text="Автор" GridPane.rowIndex="1">
                <font>
-                  <Font name="System Bold" size="26.0" />
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Label>
             <TextField fx:id="bookName_field" GridPane.columnIndex="1" />
