--- a/src/main/resources/edu/bip/client/view/main.fxml
+++ b/src/main/resources/edu/bip/client/view/main.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="510.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.bip.client.controller.ApplicationController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="510.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.bip.client.controller.ApplicationController">
    <children>
-      <Label layoutX="190.0" layoutY="14.0" prefHeight="34.0" prefWidth="351.0" text="Электронная библиотека" AnchorPane.leftAnchor="190.0" AnchorPane.rightAnchor="189.0" AnchorPane.topAnchor="5.0">
+      <Label layoutX="14.0" prefHeight="34.0" prefWidth="351.0" text="библиотека" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="365.0" AnchorPane.topAnchor="0.0">
          <font>
             <Font name="System Bold" size="28.0" />
          </font>
@@ -20,14 +20,14 @@
           <TableColumn fx:id="bookAuthor" prefWidth="75.0" text="Автор" />
           <TableColumn fx:id="bookName" prefWidth="75.0" text="Название" />
             <TableColumn fx:id="bookPublisher" prefWidth="75.0" text="Издательство" />
-            <TableColumn fx:id="bookYear" prefWidth="75.0" text="Год выпуска" />
+            <TableColumn fx:id="bookYear" prefWidth="75.0" text="Год" />
             <TableColumn fx:id="bookChapter" text="Жанр" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <ButtonBar layoutX="140.0" layoutY="465.0" prefHeight="40.0" prefWidth="450.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="140.0" AnchorPane.rightAnchor="140.0" AnchorPane.topAnchor="465.0">
+      <ButtonBar layoutX="266.0" layoutY="460.0" prefHeight="40.0" prefWidth="450.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="266.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="460.0">
         <buttons>
           <Button mnemonicParsing="false" onAction="#click_newBook" text="Добавить" />
             <Button mnemonicParsing="false" onAction="#click_editBook" text="Редактировать" />
