--- a/src/main/resources/edu/bip/client/view/main.fxml
+++ b/src/main/resources/edu/bip/client/view/main.fxml
@@ -1,39 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="510.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.bip.client.controller.ApplicationController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
-      <Label layoutX="14.0" prefHeight="34.0" prefWidth="351.0" text="библиотека" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="365.0" AnchorPane.topAnchor="0.0">
-         <font>
-            <Font name="System Bold" size="28.0" />
-         </font>
-      </Label>
-      <TableView fx:id="tableBooks" layoutX="8.0" layoutY="55.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
-        <columns>
-          <TableColumn fx:id="bookAuthor" prefWidth="75.0" text="Автор" />
-          <TableColumn fx:id="bookName" prefWidth="75.0" text="Название" />
-            <TableColumn fx:id="bookPublisher" prefWidth="75.0" text="Издательство" />
-            <TableColumn fx:id="bookYear" prefWidth="75.0" text="Год" />
-            <TableColumn fx:id="bookChapter" text="Жанр" />
-        </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-      <ButtonBar layoutX="266.0" layoutY="460.0" prefHeight="40.0" prefWidth="450.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="266.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="460.0">
-        <buttons>
-          <Button mnemonicParsing="false" onAction="#click_newBook" text="Добавить" />
-            <Button mnemonicParsing="false" onAction="#click_editBook" text="Редактировать" />
-            <Button mnemonicParsing="false" onAction="#click_duplicateBook" text="Дублировать" />
-            <Button mnemonicParsing="false" onAction="#click_removeBook" text="Удалить" />
-        </buttons>
-      </ButtonBar>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0">
+         <children>
+            <TabPane prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
+              <tabs>
+                <Tab text="Книги">
+                     <content>
+                        <SplitPane dividerPositions="0.29797979797979796" prefHeight="160.0" prefWidth="200.0">
+                          <items>
+                            <AnchorPane maxWidth="100.0" minHeight="0.0" minWidth="100.0" prefHeight="372.0" prefWidth="108.0">
+                                 <children>
+                                    <GridPane prefHeight="165.0" prefWidth="108.0">
+                                      <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                      </rowConstraints>
+                                       <children>
+                                          <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Button" />
+                                          <Button layoutX="10.0" layoutY="25.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Button" GridPane.rowIndex="1" />
+                                          <Button layoutX="10.0" layoutY="80.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Button" GridPane.rowIndex="2" />
+                                       </children>
+                                    </GridPane>
+                                 </children>
+                              </AnchorPane>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                 <children>
+                                    <TableView prefHeight="371.0" prefWidth="494.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                      <columns>
+                                        <TableColumn prefWidth="75.0" text="C1" />
+                                        <TableColumn prefWidth="75.0" text="C2" />
+                                      </columns>
+                                    </TableView>
+                                 </children>
+                              </AnchorPane>
+                          </items>
+                        </SplitPane>
+                     </content>
+                </Tab>
+              </tabs>
+            </TabPane>
+            <AnchorPane layoutX="110.0" layoutY="32.0" prefHeight="368.0" prefWidth="490.0">
+               <children>
+                  <TableView prefHeight="368.0" prefWidth="490.0">
+                    <columns>
+                      <TableColumn fx:id="bookName" prefWidth="90.0" text="Название" />
+                      <TableColumn fx:id="bookAuthor" prefWidth="77.0" text="Автор" />
+                        <TableColumn fx:id="bookPublisher" prefWidth="102.0" text="Издательство" />
+                        <TableColumn fx:id="bookYear" prefWidth="95.0" text="Год издания" />
+                        <TableColumn fx:id="bookChapter" prefWidth="95.0" text="жанр" />
+                    </columns>
+                  </TableView>
+               </children>
+            </AnchorPane>
+         </children>
+      </AnchorPane>
    </children>
-</AnchorPane>
+</VBox>
