--- a/src/main/resources/edu/bip/client/view/main.fxml
+++ b/src/main/resources/edu/bip/client/view/main.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.bip.client.controller.ApplicationController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.bip.client.controller.BookController">
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0">
          <children>
@@ -43,10 +43,13 @@
                               </AnchorPane>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                                  <children>
-                                    <TableView prefHeight="371.0" prefWidth="494.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                    <TableView fx:id="tableBooks" prefHeight="371.0" prefWidth="494.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                       <columns>
-                                        <TableColumn prefWidth="75.0" text="C1" />
-                                        <TableColumn prefWidth="75.0" text="C2" />
+                                        <TableColumn fx:id="bookName" prefWidth="75.0" text="Название" />
+                                        <TableColumn fx:id="bookAuthor" prefWidth="75.0" text="автор" />
+                                          <TableColumn fx:id="bookPublisher" prefWidth="75.0" text="издательство" />
+                                          <TableColumn fx:id="bookYear" prefWidth="75.0" text="год" />
+                                          <TableColumn fx:id="bookChapter" prefWidth="75.0" text="жанр" />
                                       </columns>
                                     </TableView>
                                  </children>
@@ -55,21 +58,83 @@
                         </SplitPane>
                      </content>
                 </Tab>
+                  <Tab text="авторы">
+                     <content>
+                        <SplitPane dividerPositions="0.29797979797979796" prefHeight="160.0" prefWidth="200.0">
+                           <items>
+                              <AnchorPane maxWidth="100.0" minHeight="0.0" minWidth="100.0" prefHeight="372.0" prefWidth="108.0">
+                                 <children>
+                                    <GridPane prefHeight="165.0" prefWidth="108.0">
+                                       <columnConstraints>
+                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                       </columnConstraints>
+                                       <rowConstraints>
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                       </rowConstraints>
+                                       <children>
+                                          <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Button" />
+                                          <Button layoutX="10.0" layoutY="25.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Button" GridPane.rowIndex="1" />
+                                          <Button layoutX="10.0" layoutY="80.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Button" GridPane.rowIndex="2" />
+                                       </children>
+                                    </GridPane>
+                                 </children>
+                              </AnchorPane>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                 <children>
+                                    <TableView fx:id="tableAuthor" prefHeight="371.0" prefWidth="494.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                       <columns>
+                                          <TableColumn fx:id="AuthorName" prefWidth="75.0" text="имя" />
+                                          <TableColumn fx:id="AuthorSurName" prefWidth="75.0" text="отч" />
+                                          <TableColumn fx:id="AuthorLastName" prefWidth="75.0" text="фамилия" />
+                                       </columns>
+                                    </TableView>
+                                 </children>
+                              </AnchorPane>
+                           </items>
+                        </SplitPane>
+                     </content>
+                  </Tab>
+                  <Tab text="издательства">
+                     <content>
+                        <SplitPane dividerPositions="0.29797979797979796" prefHeight="160.0" prefWidth="200.0">
+                           <items>
+                              <AnchorPane maxWidth="100.0" minHeight="0.0" minWidth="100.0" prefHeight="372.0" prefWidth="108.0">
+                                 <children>
+                                    <GridPane prefHeight="165.0" prefWidth="108.0">
+                                       <columnConstraints>
+                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                       </columnConstraints>
+                                       <rowConstraints>
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                       </rowConstraints>
+                                       <children>
+                                          <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Button" />
+                                          <Button layoutX="10.0" layoutY="25.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Button" GridPane.rowIndex="1" />
+                                          <Button layoutX="10.0" layoutY="80.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Button" GridPane.rowIndex="2" />
+                                       </children>
+                                    </GridPane>
+                                 </children>
+                              </AnchorPane>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                 <children>
+                                    <TableView prefHeight="371.0" prefWidth="494.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                       <columns>
+                                          <TableColumn prefWidth="75.0" text="название" />
+                                          <TableColumn prefWidth="75.0" text="город" />
+                                       </columns>
+                                    </TableView>
+                                 </children>
+                              </AnchorPane>
+                           </items>
+                        </SplitPane>
+                     </content>
+                  </Tab>
               </tabs>
             </TabPane>
-            <AnchorPane layoutX="110.0" layoutY="32.0" prefHeight="368.0" prefWidth="490.0">
-               <children>
-                  <TableView fx:id="tableBooks" prefHeight="368.0" prefWidth="490.0">
-                    <columns>
-                      <TableColumn fx:id="bookName" prefWidth="90.0" text="Название" />
-                      <TableColumn fx:id="bookAuthor" prefWidth="77.0" text="Автор" />
-                        <TableColumn fx:id="bookPublisher" prefWidth="102.0" text="Издательство" />
-                        <TableColumn fx:id="bookYear" prefWidth="95.0" text="Год издания" />
-                        <TableColumn fx:id="bookChapter" prefWidth="95.0" text="жанр" />
-                    </columns>
-                  </TableView>
-               </children>
-            </AnchorPane>
          </children>
       </AnchorPane>
    </children>
